# crudcrate-example-minimal

./: Cargo.toml  README.md
src/: main.rs
